# a_day_in_mars

./: .gitignore  Cargo.toml  README.md
programs/: Anchor.toml
programs/programs-ecs/components/position/src/: lib.rs
programs/programs-ecs/systems/movement/src/: lib.rs
programs/programs/programs/: Cargo.toml
programs/programs/programs/src/: lib.rs
programs/tests/: programs.ts
src/: lib.rs  planet.rs  rockets.rs  scenemanager.rs
src/data/: rockets.json
