[package]
name = "a_martian_day"
version = "0.1.0"
edition = "2021"

[dependencies]


env_logger = "0.11.3"
log = "0.4.22"
rodio = "0.19.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
turbo = { version = "*", package = "turbo-genesis-sdk" }

[lib]
crate-type = ["cdylib"]
[profile.dev]
debug = true

[profile.release]
debug = true
